Ajout Edition Client, Ajout Supression Client

--- a/src/BackOfficeBundle/Resources/views/Client/editClient.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Client/editClient.html.twig
@@ -38,7 +38,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="x_panel">
                                     <div class="x_title">
-                                        <h2>Ajouter un Client</h2>
+                                        <h2>Editer un Client</h2>
                                         <ul class="nav navbar-right panel_toolbox">
                                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                             </li>
@@ -97,11 +97,11 @@
                                                     <div class="col-md-6 col-md-offset-3">
                                                         {{ form_row(form.cancel,{ 'attr': {'class': 'btn btn-primary pull-left'},'label':'Annuler' }) }}
                                                         {{ form_row(form.save,{ 'attr': {'class': 'btn btn-success pull-right','onclick':"new PNotify({
-                                  title: 'Client Ajouté',
+                                  title: 'Client Modifié',
                                   text: 'Vous allez être redirigé!',
                                   type: 'success',
                                   styling: 'bootstrap3'
-                              });"},'label':'Ajouter' }) }}
+                              });"},'label':'Modifier' }) }}
                                                     </div>
                                                 </div>
 
