--- a/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
@@ -36,7 +36,7 @@
                 <li><a><i class="fa fa-users"></i> Client <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="{{ app.request.getBaseURL() }}/client/new">Crée un client</a></li>
-                        <li><a href="{{ app.request.getBaseURL() }}/client">Liste des clients</a></li>
+                        <li><a href="{{ app.request.getBaseURL() }}/client">Rechercher un client</a></li>
                     </ul>
                 </li>
                 <li><a><i class="fa fa-database"></i> Données <span class="fa fa-chevron-down"></span></a>
