--- a/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
@@ -68,8 +68,10 @@
                               <td>{{ client.email }}</td>
                               <td>
                                   <button class="btn btn-info btn-sm"><span class="fa fa-plus-circle"></span> Visualiser</button>
-                                  <button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button>
-                                  <button class="btn btn-danger btn-sm"><span class="fa fa-times-circle"></span> Supprimer</button>
+                                  <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/edit"><button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button></a>
+                                  {{ form_start(delete_forms[client.id], {attr: {style: 'display:inline','onclick': 'return confirm("Es-tu sur de vouloir supprimer le client ?")'}}) }}
+                                        <button class="btn btn-danger btn-sm"><span class="fa fa-times-circle"></span> Supprimer</button>
+                                  {{ form_end(delete_forms[client.id]) }}
                               </td>
                           </tr>
                       {% endfor %}
