--- a/src/BackOfficeBundle/Resources/views/Client/editClient.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Client/editClient.html.twig
@@ -49,7 +49,6 @@
                                     </div>
                                     <div class="x_content">
                                             {{ form_start(form,{ 'attr': {'class': 'form-horizontal form-label-left'} }) }}
-
                                                 <div class="item form-group">
                                                     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Nom <span class="required">*</span>
                                                     </label>
@@ -69,6 +68,13 @@
                                                     </label>
                                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                                         {{ form_row(form.ville,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                                                    </div>
+                                                </div>
+                                                <div class="item form-group">
+                                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Code Postal <span class="required">*</span>
+                                                    </label>
+                                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                                        {{ form_row(form.codePostal,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
                                                     </div>
                                                 </div>
                                                 <div class="item form-group">
