--- a/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
@@ -52,6 +52,7 @@
                           <th>Nom</th>
                           <th>Prénom</th>
                           <th>Ville</th>
+                          <th>Code Postal</th>
                           <th>Téléphone</th>
                           <th>Email</th>
                           <th>Action</th>
@@ -64,10 +65,11 @@
                               <td>{{ client.nom }}</td>
                               <td>{{ client.prenom }}</td>
                               <td>{{ client.ville }}</td>
+                              <td>{{ client.codePostal }}</td>
                               <td>{{ client.telephone }}</td>
                               <td>{{ client.email }}</td>
                               <td>
-                                  <button class="btn btn-info btn-sm"><span class="fa fa-plus-circle"></span> Visualiser</button>
+                                  <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/profile"><button class="btn btn-info btn-sm"><span class="fa fa-plus-circle"></span> Visualiser</button></a>
                                   <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/edit"><button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button></a>
                                   {{ form_start(delete_forms[client.id], {attr: {style: 'display:inline','onclick': 'return confirm("Es-tu sur de vouloir supprimer le client ?")'}}) }}
                                         <button class="btn btn-danger btn-sm"><span class="fa fa-times-circle"></span> Supprimer</button>
