Ajout des 2 premiere etapes de la creation dun devis

--- a/src/BackOfficeBundle/Resources/views/Devis/newDevis.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Devis/newDevis.html.twig
@@ -58,7 +58,7 @@
                             <span class="step_no">1</span>
                             <span class="step_descr">
                                               Etape 1<br />
-                                              <small>Paramètres</small>
+                                              <small>Paramètre client</small>
                                           </span>
                           </a>
                         </li>
@@ -67,7 +67,7 @@
                             <span class="step_no">2</span>
                             <span class="step_descr">
                                               Etape 2<br />
-                                              <small>Step 2 description</small>
+                                              <small>Paramètre du Devis</small>
                                           </span>
                           </a>
                         </li>
@@ -76,7 +76,7 @@
                             <span class="step_no">3</span>
                             <span class="step_descr">
                                               Etape 3<br />
-                                              <small>Step 3 description</small>
+                                              <small>Contenu Devis</small>
                                           </span>
                           </a>
                         </li>
@@ -91,65 +91,65 @@
                         </li>
                       </ul>
                       <div id="step-1">
-                        <form class="form-horizontal form-label-left">
-
-                          <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
-                            </label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                              <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
-                            </label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                              <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                              <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                              <div id="gender" class="btn-group" data-toggle="buttons">
-                                <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                  <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
-                                </label>
-                                <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                  <input type="radio" name="gender" value="female"> Female
-                                </label>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
-                            </label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                              <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
-                            </div>
-                          </div>
-
+                      <h2 class="StepTitle">Paramètre client</h2>
+                        {{ form_start(form_devis,{ 'attr': {'class': 'form-horizontal form-label-left'} }) }}
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Entreprise <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.entreprise,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Client <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.client,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
                         </form>
-
                       </div>
                       <div id="step-2">
-                        <h2 class="StepTitle">Step 2 Content</h2>
-                        <p>
-                          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
+                      <h2 class="StepTitle">Paramètre du Devis</h2>
+                      <form class="form-horizontal form-label-left">
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">TVA <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.tva,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Chantier <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.chantier,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Numéro <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.numero,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Date <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.date,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
+                           <div class="item form-group">
+                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Information <span class="required">*</span>
+                               </label>
+                               <div class="col-md-6 col-sm-6 col-xs-12">
+                                    {{ form_row(form_devis.information,{ 'attr': {'class': 'form-control col-md-7 col-xs-12'} }) }}
+                               </div>
+                           </div>
                       </div>
                       <div id="step-3">
-                        <h2 class="StepTitle">Step 3 Content</h2>
+                        <h2 class="StepTitle">Contenu Devis</h2>
                         <p>
                           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                           eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -172,6 +172,8 @@
                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                           in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
+
+                        </form>
                       </div>
 
                     </div>
