--- a/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Client/listeClient.html.twig
@@ -69,7 +69,7 @@
                               <td>{{ client.telephone }}</td>
                               <td>{{ client.email }}</td>
                               <td>
-                                  <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/profile"><button class="btn btn-info btn-sm"><span class="fa fa-plus-circle"></span> Visualiser</button></a>
+                                  <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/profile"><button class="btn btn-info btn-sm"><span class="fa fa-eye"></span> Visualiser</button></a>
                                   <a href="{{ app.request.getBaseURL() }}/client/{{ client.id }}/edit"><button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button></a>
                                   {{ form_start(delete_forms[client.id], {attr: {style: 'display:inline','onclick': 'return confirm("Es-tu sur de vouloir supprimer le client ?")'}}) }}
                                         <button class="btn btn-danger btn-sm"><span class="fa fa-times-circle"></span> Supprimer</button>
