--- a/src/BackOfficeBundle/Resources/views/Produit/editProduit.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Produit/editProduit.html.twig
@@ -82,7 +82,7 @@
                                                     <div class="col-md-6 col-md-offset-3">
                                                         {{ form_row(form.cancel,{ 'attr': {'class': 'btn btn-primary pull-left'},'label':'Annuler' }) }}
                                                         {{ form_row(form.save,{ 'attr': {'class': 'btn btn-success pull-right','onclick':"new PNotify({
-                                  title: 'Produit ajouté',
+                                  title: 'Produit modifié',
                                   text: 'Vous allez être redirigé!',
                                   type: 'success',
                                   styling: 'bootstrap3'
@@ -119,6 +119,4 @@
     <script src="{{ asset('template/pnotify/dist/pnotify.js') }}"></script>
     <script src="{{ asset('template/pnotify/dist/pnotify.buttons.js') }}"></script>
     <script src="{{ asset('template/pnotify/dist/pnotify.nonblock.js') }}"></script>
-
-
 {% endblock %}
